c/examples/writing-a-c-compiler-tests/tests/chapter_14/invalid_parse/malformed_abstract_declarator.c
int main(void) {
    /* This abstract declarator is malformed.
     * Pointer declarators like * cannot appear after
     * parenthesized expressions
     */
    (int (*)*) 10;
    return 0;
}